--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+person.name = zhangsan  
+person.age =20  
+person.boss = false  
+person.birth = 2017/11/12
+a = ${random.value} 
+b = ${random.int}
+spring.profiles.active=dev
